@@ -5008,9 +5008,11 @@ typedef struct {
 #define package_length  ((sizeof(*(Package)0)-offsetofa(record_,recdata))/sizeof(gcv_object_t))
 # Some packages are case-sensitive.
 #define mark_pack_casesensitive(obj)  record_flags_set(ThePackage(obj),bit(0))
+#define mark_pack_caseinsensitive(obj) record_flags_clr(ThePackage(obj),bit(0))
 #define pack_casesensitivep(obj)      (record_flags(ThePackage(obj)) & bit(0))
 # Some packages are case-inverted.
 #define mark_pack_caseinverted(obj)  record_flags_set(ThePackage(obj),bit(1))
+#define mark_pack_casepreserved(obj) record_flags_clr(ThePackage(obj),bit(1))
 #define pack_caseinvertedp(obj)      (record_flags(ThePackage(obj)) & bit(1))
 # Some packages, such as COMMON-LISP, are locked.
 #define mark_pack_locked(obj)    record_flags_set(ThePackage(obj),bit(2))
