@@ -714,6 +714,8 @@ LISPFUNNR(package_case_sensitive_p,1)
 LISPFUNNR(package_case_inverted_p,1)
 LISPFUNNR(package_documentation,1)
 LISPFUNN(set_package_documentation,2)
+LISPFUNN(set_package_case_inverted_p,2)
+LISPFUNN(set_package_case_sensitive_p,2)
 LISPFUNN(set_package_lock,2)
 LISPFUNN(symbol_value_lock,1)
 LISPFUNN(check_package_lock,3)
